--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "gatsby-transformer-sharp": "^1.6.22",
     "lodash": "^4.15.0",
     "react-disqus-comments": "^1.1.1",
-    "react-mailchimp-subscribe": "^1.0.3"
+    "react-mailchimp-subscribe": "^1.0.3",
+    "react-share": "^2.0.0"
   },
   "homepage": "https://codebushi.com",
   "keywords": [
