--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "author": "Hunter Chang",
   "dependencies": {
-    "gatsby": "^1.9.236",
+    "gatsby": "^1.9.241",
     "gatsby-image": "^1.0.42",
     "gatsby-link": "^1.6.39",
     "gatsby-plugin-google-analytics": "^1.0.24",
@@ -13,14 +13,15 @@
     "gatsby-plugin-sharp": "^1.6.41",
     "gatsby-plugin-sitemap": "^1.2.5",
     "gatsby-remark-copy-linked-files": "^1.5.9",
-    "gatsby-remark-images": "^1.5.56",
+    "gatsby-remark-images": "^1.5.60",
     "gatsby-remark-prismjs": "^1.2.21",
     "gatsby-source-filesystem": "^1.5.27",
     "gatsby-transformer-remark": "^1.7.37",
     "gatsby-transformer-sharp": "^1.6.22",
     "react-disqus-comments": "^1.1.1",
     "react-mailchimp-subscribe": "^1.0.3",
-    "react-share": "^2.0.0"
+    "react-share": "^2.0.0",
+    "lodash": "^4.17.5"
   },
   "homepage": "https://codebushi.com",
   "keywords": [
