--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "gatsby-source-filesystem": "^1.5.27",
     "gatsby-transformer-remark": "^1.7.37",
     "gatsby-transformer-sharp": "^1.6.22",
+    "lodash": "^4.17.5",
     "react-disqus-comments": "^1.1.1",
     "react-mailchimp-subscribe": "^1.0.3",
     "react-share": "^2.0.0",
-    "lodash": "^4.17.5"
+    "webfontloader": "^1.6.28"
   },
   "homepage": "https://codebushi.com",
   "keywords": [
